# GameBase

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
include/: bin-utils.hpp  buttons.hpp  effect.hpp  game.hpp  imgui-SFML.h  object.hpp  physic.hpp  resource.hpp  scene.hpp  settings.hpp  splash.hpp  ui.hpp  utils.hpp  vars.hpp
include/XMLLoader/: Loader.hpp  XMLLoader.hpp
src/: effect.cpp  game.cpp  main.cpp  object.cpp  physic.cpp  resource-audio.cpp  resource.cpp  scene.cpp  settings.cpp  splash.cpp  translate.cpp  ui.cpp  utils.cpp  vars.cpp
src/resources/gui/: SettingsWindow.xml
src/resources/gui/themes/: default.css
src/resources/shaders/: clouds:clouds.frag  simple:simple.frag  test:simple.frag
src/resources/stages/: map.yaml
src/resources/translates/: en-US.yaml  en.yaml  pt-BR.yaml
src/settings/: window.cpp
src/ui/: settings.cpp
